--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ html, hmtl a{
 
 body{
 	background:#2F3238;
-	color:#8F9299;
+	color:rgb(20, 255, 255);
 	font-weight:300;
 	font-size:16px;
 	font-family: 'Titillium Web', sans-serif;
@@ -34,7 +34,7 @@ body{
 
 
 a{
-	color:#DE5E60;
+	color:rgb(1, 164, 240);
 	text-decoration: none;
 	cursor: pointer;
 	
